<resources>
    <string name="app_name">Koekata</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_pomodoro">Pomodoro</string>
    <string name="menu_wakeup_time">Wakeup Time</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="DailyTask">Daily Task</string>
    <string name="textholder">TextHolder</string>
    <string name="channel_name">Daily Tasks</string>
    <string name="channel_description">Daily Tasks</string>

    <string-array name="repeat_time">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>7</item>
        <item>15</item>
    </string-array>


    <string-array name="study_time">
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
    </string-array>

    <string-array name="short_relax_time">
        <item>5</item>
        <item>7</item>
        <item>10</item>
        <item>15</item>
    </string-array>

    <string-array name="long_relax_time">
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string-array name="alarm_sound">
        <item>Bell</item>
        <item>Doraemon</item>
    </string-array>


</resources>